infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energysuite-base-ingress
  namespace: energysuite
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: energysuite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-shell
                port:
                  number: 80
          - path: /mf-hydrology
            pathType: Prefix
            backend:
              service:
                name: mf-hydrology
                port:
                  number: 80
          - path: /mf-operations
            pathType: Prefix
            backend:
              service:
                name: mf-operations
                port:
                  number: 80
          - path: /mf-portfolio
            pathType: Prefix
            backend:
              service:
                name: mf-portfolio
                port:
                  number: 80
          - path: /mf-pricing
            pathType: Prefix
            backend:
              service:
                name: mf-pricing
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /api/v1/risk
            pathType: Prefix
            backend:
              service:
                name: risk-service
                port:
                  number: 8000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: etrm-service
                port:
                  number: 8080
          - path: /hubs
            pathType: Prefix
            backend:
              service:
                name: etrm-service
                port:
                  number: 8080
    - host: energysuite.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-shell
                port:
                  number: 80
          - path: /mf-hydrology
            pathType: Prefix
            backend:
              service:
                name: mf-hydrology
                port:
                  number: 80
          - path: /mf-operations
            pathType: Prefix
            backend:
              service:
                name: mf-operations
                port:
                  number: 80
          - path: /mf-portfolio
            pathType: Prefix
            backend:
              service:
                name: mf-portfolio
                port:
                  number: 80
          - path: /mf-pricing
            pathType: Prefix
            backend:
              service:
                name: mf-pricing
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /api/v1/risk
            pathType: Prefix
            backend:
              service:
                name: risk-service
                port:
                  number: 8000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: etrm-service
                port:
                  number: 8080
          - path: /hubs
            pathType: Prefix
            backend:
              service:
                name: etrm-service
                port:
                  number: 8080
